# zad3-delipl-1

./: CMakeLists.txt
app/: main.cpp  softBody.cpp
inc/: Figure.h  Matrix.h  Menu.h  Object.hpp  Scene.hpp  Vector.h  config.hpp.in  frameRate.h
lib/doctest/: CMakeLists.txt
prn/: Matrix.tpp  Vector.tpp
src/: Figure.cpp  GnuPlotApi.cpp  Matrix.cpp  Menu.cpp  Object.cpp  Scene.cpp  Vector.cpp  empty.cpp
tests/: CMakeLists.txt  dummy.cpp  main.cpp  matrix.ut.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
